<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/fsuGold"
    tools:context="com.fsu.tri13.youdontnolejack.FinalScreenActivity">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="20"
		android:layout_gravity="center_horizontal"
		android:layout_margin="5dp"
		android:background="@drawable/banner_final_score" />


	<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="0dp"
	android:layout_weight="15"
	android:orientation="horizontal"
	android:layout_gravity="center_horizontal"
	android:layout_margin="5dp"

	android:id="@+id/fs_LL1"
	>
	<!-- Format - Player: Score -->
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|left"
		android:textColor="@color/fsuGarnet"
		android:textSize="20sp"
		android:layout_marginRight="45sp"
		android:id="@+id/fs_player1"
		android:text="@string/player_one" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|right"
		android:textColor="@color/fsuGarnet"
		android:textSize="20sp"
		android:id="@+id/fs_score1"
		android:text="Score 1" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="15"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:id="@+id/fs_LL2"
        android:layout_margin="5dp"
		android:visibility="invisible"

		>
		<!-- Format - Player: Score -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:layout_gravity="center|left"
			android:layout_marginRight="45sp"
			android:id="@+id/fs_player2"
			android:text="@string/player_two" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|right"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:id="@+id/fs_score2"
			android:text="Score 1" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="15"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:id="@+id/fs_LL3"
        android:layout_margin="5dp"
		android:visibility="invisible"
		>
		<!-- Format - Player: Score -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|left"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:layout_marginRight="45sp"
			android:id="@+id/fs_player3"
			android:text="@string/player_three" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|right"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:id="@+id/fs_score3"
			android:text="Score 1" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="15"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:id="@+id/fs_LL4"
		android:layout_margin="5dp"
		android:visibility="invisible"
		>
		<!-- Format - Player: Score -->
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center|left"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:layout_marginRight="45sp"
			android:id="@+id/fs_player4"
			android:text="@string/player_four" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/fsuGarnet"
			android:textSize="20sp"
			android:layout_gravity="center|right"
			android:id="@+id/fs_score4"
			android:text="Score 1" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="10"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:layout_margin="5dp"
		>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:layout_marginRight="15dp"
			android:id="@+id/button_main_menu"
			android:background="@drawable/button_main_menu_garnet"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:id="@+id/button_player_again"
			android:background="@drawable/button_play_again_garnet" />

	</LinearLayout>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="10"
		android:layout_gravity="center_horizontal|bottom"
		android:layout_margin="5dp"
		android:background="@drawable/banner_footer_alt"
		/>

</LinearLayout>
